--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         	<div class="container">
         		<div class="main_title">
         			<h2>offerings to my clients</h2>
-        			<pre>Quality Work  |  Honesty  |  Clear Communication  |  Affordable Prices.</pre>
+        			<p>Quality Work  |  Honesty  |  Clear Communication  |  Affordable Prices.</p>
         		</div>
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
