--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="My name is Sohail Virani and i am a web developer living in kitchener, Canada. I have                                         studied web design and development from Conestoga college. I have learnt many languages like                                   Html, CSS, JavaScript, dotnet, SQL, android, data visualization, data connectivity, angular,                                   django, python, Responsive site design, etc. Now I am working as a freelancer. I have done                                     many projects and i have also worked as a server administrator.">
+        <meta name="keywords" content="freelancer, web developer, freelancer website, Web Designer, Website designer, 
+                                       Web developer in kitchener, Responsive site design, HTML, CSS, JavaScript, Angular, Django,
+                                       Web developer in Ontario, Web developer in Canada, Sohail Virani, SohailV, Sohail Virani freelancer,">
+        <meta name="author" content="Sohail Virani">
         <link rel="icon" href="img/favicon.png" type="image/png">
         <title>Sohail Virani Freelancer</title>
         <!-- Bootstrap CSS -->
