--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
-									<h6>Hello Everybody, i am</h6>
-									<h3>Sohail Virani</h3>
-									<h4>Web Developer</h4>
+									<p>Hello Everybody, i am</p>
+									<h1>Sohail Virani</h1>
+									<h2>Web Developer</h2>
 									<p>I am Web Developer and have 2+ years of experience in Website Development. I am Proficient in WordPress, PHP/MySQL, HTML/CSS, JavaScript, Theme Designing, Responsive websites, CSS3, HTML5, XHTML, XML, JScript, jQuery, MySQL, Git etc.</p>
 									<ul class="list basic_info">
 										
